--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/adminDashboardCreate.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/adminDashboardCreate.html
@@ -50,9 +50,6 @@
 			<font size="3"> {{list}} </font> 
 			</div>
 {% get_input_fields class_structure|get_dict_item:list list translate  %}
-
-
-
 </div>
 {% endif %}
 {% endif %}
@@ -77,7 +74,6 @@
 			<div style="display:table-row;">
 				<div style="display:table-cell;"> 
 					<font size="3"> {{list}} </font> 
-
 				</div>
 	{% get_input_fields class_structure|get_dict_item:key key translate  %}
 
@@ -95,16 +91,11 @@
 				<!--
 				<div style="display:table-cell;" title="{% for key,value in help_tip.iteritems %}{% if list == key %}{{value}}{% endif %}{% endfor %} " class='box' > 
 					<span><font size="3"> {{list}} </font> </span> -->
-					
-				<div style="display:table-cell;" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %} " class="scard-image" >
-					
-					{# <span data-tooltip aria-haspopup="true" class="has-tip" data-disable-hover="false" tabindex="1" title="{% for key,value in help_tip.iteritems %}{% if list == key %}{{value}}{% endif %}{% endfor %}"> #}
-					
-					<span><font size="3"> {{list}} </font> </span>
+				{# <div style="display:table-cell;" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %} "  class="scard-image" > #}
+				<div style="display:table-cell;" >
+					<span data-tooltip aria-haspopup="true" class="has-tip" data-disable-hover="false" tabindex="1" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %}">
+					<font size="3"> {{list}} </font> </span>
 				</div>
-				{# {{class_structure|get_dict_item:list }} #}
-
-				
 				{% get_input_fields class_structure|get_dict_item:key key translate  %}
 				{% if list in  required_fields %}
 				<div style="display:table-cell;">
@@ -124,7 +115,7 @@
 			{% for cl in contentlist %}
 			{% for key,list in cl.iteritems %}
 			<div class="medium-12 columns">
-	{# {% include "ndf/add_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value=node.content_org|default_if_none:"" node_id=node.pk %} #}
+	{% include "ndf/add_editor.html" with var_name="content_org" var_placeholder="Enter the content here" var_value=node.content_org|default_if_none:"" node_id=node.pk %}
 			</div>
 			{% endfor %}
 			{% endfor %}
@@ -159,8 +150,10 @@
 			{% for dplt in dependencylist %}
 			{% for key,list in dplt.iteritems %}
 			<div style="display:table-row;" class='boxes' >
-	<div style="display:table-cell;" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %} " class='box' > 
-		<font size="3"> {{list}}</font> 
+	<!--<div style="display:table-cell;" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %} " class='box' > -->
+	<div style="display:table-cell;" >
+		<span data-tooltip aria-haspopup="true" class="has-tip" data-disable-hover="false" tabindex="1" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %}" >
+		<font size="3"> {{list}}</font></span>  
 	</div>
 	{% get_input_fields class_structure|get_dict_item:key key translate  %}
 			</div>
@@ -174,8 +167,10 @@
 			{% for op in options %}
 			{% for key,list in op.iteritems %}
 			<div style="display:table-row;" class='boxes' >
-				<div style="display:table-cell;" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %} " class='box' > 
-					<font size="3"> {{list}}</font> 
+				<!-- <div style="display:table-cell;" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %} " class='box' > -->
+				<div style="display:table-cell;"  > 
+					<span data-tooltip aria-haspopup="true" class="has-tip" data-disable-hover="false" tabindex="1" title="{% for key2,value in help_tip.iteritems %}{% if key == key2 %}{{value}}{% endif %}{% endfor %}" >
+					<font size="3"> {{list}}</font> </span>
 				</div>
 				{% get_input_fields class_structure|get_dict_item:key key translate  %}
 			</div>
