scr oll bars removed from note page

--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_app_styles.scss
@@ -2725,8 +2725,8 @@ $course-envelop-color: #fff;
 
     >div {
       padding-top: 15px;
-      height: 50em;
-      overflow: scroll;
+      //height: 50em;
+      //overflow: scroll;
     }
 
     .notebook-index {
