--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/adminDashboard.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/adminDashboard.html
@@ -151,7 +151,7 @@ table {
 	  <td class="title" style="font-size:95%">
       <font class="viewinput{{each.Id}}">{{each.Title}}</font><input style="display:none" class="editinput{{each.Id}}" type="text" value= "{{each.Title}}">
       <font class="viewinput{{each.Id}}">{{each.Id}}</font><input style="display:none" class="editinput{{each.Id}}" type="text" value= "{{each.Title}}">
-      <font class="viewinput{{each.Id}}">{{each.Member}}</font><input style="display:none" class="editinput{{each.Id}}" type="text" value= "{{each.Title}}">
+      <font class="viewinput{{each.Id}}">{{each.Member_of}}</font><input style="display:none" class="editinput{{each.Id}}" type="text" value= "{{each.Title}}">
       <font class="viewinput{{each.Id}}">{{each.Mem}}</font><input style="display:none" class="editinput{{each.Id}}" type="text" value= "{{each.Title}}">
     </td>
 	  {% if class_name == "File" or class_name ==  "GSystem"  %}
@@ -206,7 +206,7 @@ table {
     {% endif %}
     {% if class_name == "GSystem" %}
     <td> 
-      <a class="button medium" href="" style="width:115px;">
+      <a class="button medium" href="{% url 'basic_temp_edit' group_name each.Mem each.Id %}" style="width:115px;">
         Edit&nbsp;&nbsp;
         <i class="fi-plus"></i>
       </a>
