Made provision for add-buddy from header dropdown

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/header.html
@@ -108,7 +108,7 @@
         </ul>
         <!-- -END of NROER level one menu -->
       {% comment %}
-        
+
       {% if "CourseEventGroup" in group_object.member_of_names_list %}
       <ul class="left">
 
@@ -189,23 +189,23 @@
             </li>
             {% endif %}
 
-          
+
           {% if site.MY_COURSES_IN_HEADER %}
             <li>
               <a title="{{title}}" class="{%if title == 'My Courses'%}active{%endif%}" href="{% url 'course' request.user.username %}">
                 {% trans 'MY COURSES' %}
               </a>
             </li>
-          {% endif %}        
-                  
+          {% endif %}
+
           {% if site.MY_GROUPS_IN_HEADER %}
             <li>
               <a title="{{title}}" class="{%if title == 'My Groups'%}active{%endif%}" href="{% url 'my_groups' request.user.username %}">
                 {% trans 'MY GROUPS' %}
               </a>
             </li>
-          {% endif %}        
-        
+          {% endif %}
+
         {% endif %}
 
 
@@ -290,11 +290,24 @@
                 </li>
               {% endif %}
             {% endif %}
+
             <li>
               <a class="logout" href="{% url 'auth_logout' %}">
                 <i class="fi-power"></i> &nbsp;{% trans "Logout" %}
               </a>
             </li>
+
+            <li>
+              <a href="#" data-reveal-id="myModal" data-reveal-ajax="{% url 'list_buddy' group_id %}">
+                + Add your buddy
+              </a>
+
+              <div id="myModal" class="reveal-modal tiny" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+
+              </div>
+
+            </li>
+
           </ul>
         </li>
 
@@ -354,7 +367,7 @@
           </li>
         </ul>
 
-        
+
         <!-- Right Nav Section -->
         <ul class="right">
           <li>
