--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/basic_temp.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/basic_temp.html
@@ -3,11 +3,7 @@
 {% load ndf_tags %}
 
 {%block title %} Basic Template {% endblock %}
-
 {% block body_content %}
-
-<script type="text/javascript" src="/static/ndf/bower_components/tipped-4.5.5-light/tipped.js"></script>
-<link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/tipped-4.5.5-light/tipped.css" />
 <!--
 <form method="post" action="{% url 'type_created' groupid %}" name="{{node_gs.name}}" id="{{node_gs.name}}"> -->
 <form method="post" action=" " name="{{node_gs.name}}" id="{{node_gs.name}}">
@@ -19,15 +15,15 @@
 <font size="5"> {{node_gs.name}} </font> 
 
     <div style="display:table-row;">
-    	{% for val,dummyval in basic_list.iteritems %}
-    	<tr><td>
-        <div style="display:table-cell;" >
-            <font size="3"> {{dummyval}} : </font> 
-        </div></td>
-        <td> 
-        {% fetch_req_fields gs_struc|get_dict_item:val val %} 
-
-        </td></tr>
+        {% for bl in basic_list %}
+        	{% for val,dummyval in bl.iteritems %}
+        	<tr><td>
+            <div style="display:table-cell;" >
+                <font size="3"> {{dummyval}} </font> 
+            </div></td>
+            <td> {% fetch_req_fields gs_struc|get_dict_item:val val %} 
+            </td></tr>
+            {% endfor %}
         {% endfor %}
     </div>
 
@@ -36,29 +32,24 @@
         <tr><td>
         <!-- {% trans "AttributeType "%} -->
         <div style="display:table-cell;"> 
-           <font size="3"> {% firstof each.altnames each.name %} : </font> 
-        
+           <font size="3"> {% firstof each.altnames each.name %} </font> 
         </div></td>
-
         <!-- field_name {{each.name}}  field_value field_type {{each.data_type}}  -->
         <!-- This ndf tag ats_fields is done to fetch the attribute_type_set. donot replace this with html_widget tag cause it will not allow it to be saved. The field 'value' in the dict is not present as it is fetched directly from the database  -->
-
-        <td>{% ats_fields each.data_type each.name groupid each.complex_data_type %}
-
+        <td>{% ats_fields each.data_type each.name groupid each.complex_data_type each.help_text each.validators %}
         </td></tr>
         {% endfor %}
     </div>
 
     <div style="display:table-row;">
         {% for each in final_ats %}
-        <tr>
-            <td>
+        <tr><td>
         <!--   {% trans "PossibleAttributeType "%} -->
-        <div style="display:table-cell;"> 
-           <font size="3"> {% firstof each.altnames each.name %} : </font> 
+        <div style="display:table-cell;">
+           <font size="3"> {% firstof each.altnames each.name %} </font> 
         </div></td>
         <td>
-            {% ats_fields each.data_type each.name groupid each.complex_data_type %}
+            {% ats_fields each.data_type each.name groupid each.complex_data_type each.help_text each.validators %}
         </td></tr>
         {% endfor %}
     </div>
@@ -67,10 +58,9 @@
     <div style="display:table-row;">
         {% for each in f_rts_object_dict %}
         <div id="{{each.name}}">
-        <tr>
-            <td>
+        <tr><td>
         <div style="display:table-cell;"> 
-           <font size="3"> {% firstof each.altnames each.name %} : </font> 
+           <font size="3"> {% firstof each.altnames each.name %} </font> 
         </div></td>
         <td>
             {% rts_fields each.name each.object_type groupid %}
@@ -83,10 +73,9 @@
     <div style="display:table-row;">
         {% for each in f_pos_rts_object_dict %}
         <div id="{{each.name}}">
-        <tr>
-            <td>
+        <tr><td>
         <div style="display:table-cell;"> 
-           <font size="3"> {% firstof each.altnames each.name %} : </font> 
+           <font size="3"> {% firstof each.altnames each.name %} </font> 
         </div></td>
         <td>
             {% rts_fields each.name each.object_type groupid %}
